# NYC_UBER_project

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_inference  README.md  README_OLD.md  README_old2.md  pyproject.toml  requirements.txt  requirements_all.txt  requirements_inference  requirements_inference.txt  requirements_training.txt
.github/workflows/: build_docker.yml  build_push_docker.yml
src/nyc_forecasting/: train_lstm.py  train_lstm_old.py  train_xgboost.py
src/nyc_forecasting/bigquery_sql/: bulk_groupby_day_metrics.sql  bulk_groupby_hour_metrics.sql  bulk_prediction_error.sql  bulk_rolling7days_byzone_metrics.sql  bulk_rolling7days_metrics.sql  merge_groupby_day_metrics.sql  merge_groupby_hour_metrics.sql  merge_prediction_error.sql  merge_rolling7days_byzone_metrics.sql  merge_rolling7days_metrics.sql  metrics.sql  metrics_over_time.sql  metrics_over_zone.sql  run_bigquery_sql.py  some.sql  view_groupby_zone_metrics.sql  view_latest_prediction_metrics_rolling_7d.sql  view_overall_metrics.sql
src/nyc_forecasting/core/: artifacts.py  config.py  data.py  features.py  lstm_class.py  lstm_functions.py  metrics.py  torch_artifacts.py  torch_dataset.py  torch_functions.py  torch_seed.py  transformer_class.py  tree_tabular.py
src/nyc_forecasting/inference/: batch_pipe.py  bigquery_io.py  config.py  single_pipe.py  xgboost_batch.py  xgboost_batch_old.py  xgboost_inference.py
src/nyc_forecasting/training/: run_preprocessing.py  train_lstm.py  train_production_xgboost.py  train_transformer.py  train_xgboost.py  train_xgboost_old_wfullmode.py
